package com.example.user.present.counter.count

import androidx.fragment.app.Fragment

class ResetTotalCountFragment : Fragment()