package com.example.user.present.counter.count

import androidx.lifecycle.ViewModel

class ResetTotalCountViewModel : ViewModel()