@startuml

title [クラス図]

' === 定義 ===
package android {
    class SharedPreferences
    class Notification
}

class MainActivity <<Activity>> {
    + showCounter()
    + showResetCountScreen()
}

class MeasurementReceiver <<BroadcastReceiver>> {
    + onREceive()
}

class MeasurementService <<Service>> {

}

package user.unlock.count {
    class UnlockReceiver <<BroadcastReceiver>> {
        + onReceive()
    }

    class RecordService <<Service>> {
        + onStartCommand()
    }

    class DisplayCountFragment <<Fragment>> {
        + showCounter()
    }

    class DisplayCountViewModel <<ViewModel>> {
    }

    class ResetTotalCountFragment <<Fragment>> {
        + resetTotalCount()
        - saveTotalCount()
    }

    class ResetTotalCountViewModel <<ViewModel>> {

    }
}

package data {
    class UnlockCountRepository
    class UnlockCountLocalDataSource
    class UnlockCount
}

' === 関係 ===
MainActivity "1" o-- "1" MeasurementReceiver
MeasurementReceiver --> MeasurementService : start / stop >
MeasurementService "1" o-- "1" UnlockReceiver
MeasurementService "1" -- "1" Notification : create >
UnlockReceiver "1" -- "1" RecordService : use >
RecordService "1" o--> "1" UnlockCountRepository
UnlockCountRepository "1" o--> "1" UnlockCountLocalDataSource
UnlockCountLocalDataSource "1" ..> "1" UnlockCount
UnlockCountLocalDataSource "1" --> "1" SharedPreferences

MainActivity -- DisplayCountFragment : create >
MainActivity -- ResetTotalCountFragment : create >
DisplayCountFragment -- DisplayCountViewModel
ResetTotalCountFragment -- ResetTotalCountViewModel
DisplayCountViewModel -- UnlockCountRepository
ResetTotalCountViewModel -- UnlockCountRepository

@enduml